# bluefox3_ros

./: .gitignore  CMakeLists.txt  README.md  bluefox3.xml  package.xml
config/: Bluefox3Params.cfg  bluefox3.yaml  bluefox3_params.yaml
config/calib/: ost.yaml  pub_cinfo.launch
include/bluefox3/: bluefox3.h
install/: install_mvGenTL_Acquire.sh
launch/: bluefox3.launch  pub_cinfo.launch  uav.launch
src/: bluefox3.cpp  list_devices.cpp
